Fixed Index and Added Sponsors to Bottom of Page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -132,7 +131,7 @@
     <div class="text-center">
       </br> <!-- BREAK -->
       <h1 class="headers">3rd Annual Jigs Up Blugold Ice Fishing Contest</h1>
-      <h5 class="headers">Presented by Blugold Recreation, the Lake Wissota Lions Club, and UWEC Athletics</h5>
+      <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img src="images/3logo.png"</img>
       <div class="horizbar">
       </div>
@@ -178,7 +177,9 @@
           </p>
           <br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
-          <a target="_blank" href="assets/rules.pdf" <button class="btn1">Click here to see the rules</button></a>
+          <div class="btn-center">
+            <a target="_blank" href="assets/rules.pdf" <button class="btn1" >Click here to see the rules</button></a>
+          </div>
         </div>
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
