Replaced Results with Past Results
Used accordion boxes for past results page. Change headers to reflect
name change

--- a/results.html
+++ b/results.html
@@ -71,7 +71,7 @@
               <li role="presentation" class="divider"></li>
               <li><a href="sponsors.html">Sponsors</a></li>
               <li role="presentation" class="divider"></li>
-              <li><a href="results.html">Results</a></li>
+              <li><a href="pastResults.html">Past Results</a></li>
             </ul>
           </li>
           <li class="navcol"><a href="tickets.html">Tickets</a></li>
