--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<!-- Bootstrap -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,10 +46,9 @@
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+					<span class="menuTrigger" id="hamburger-one">
+							<span class="mainLine"></span>
+						</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img src="images/logo.png" />
@@ -70,7 +71,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="pastResults.html">Past Results</a></li>
+							<li><a href="results.html">Results</a></li>
 						</ul>
 					</li>
 					<li class="navcol"><a href="tickets.html">Tickets</a></li>
@@ -217,6 +218,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body>
 
 <footer>
@@ -227,7 +230,7 @@
       <br /> <!-- BREAK -->
     </p>
     <div class="buildn">
-      /build 0.9.0.5
+      /build 0.9.0.0
     </div>
   </div>
   <div class="footer visible-xs">
