--- a/prizes.html
+++ b/prizes.html
@@ -12,6 +12,9 @@
 	<!-- Bootstrap -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
+
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,10 +47,9 @@
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+					<span class="menuTrigger" id="hamburger-one">
+							<span class="mainLine"></span>
+						</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img src="images/logo.png" />
@@ -104,88 +106,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2 class="headers">Prizes</h2>
+					<h2 class="headers">Check Back Later for an Updated List of Prizes</h2>
 				</div> <!-- #col-lg-12 -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="lightbox" href="images/beach.jpg">
-						<img src="http://placehold.it/400x300" class="img-thumbnail" />
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a class="thumbnail" href="#">
-						<img class="img-responsive" src="http://placehold.it/400x300" alt="">
-					</a>
-				</div> <!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 			</div> <!-- #row  -->
 		</div> <!-- #container -->
 		<br /> <!-- BREAK -->
@@ -216,6 +138,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="/js/boostrap-media-lightbox.min.js"></script>
 	<script src="/js/boostrap-media-lightbox.js"></script>
+	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body>
 
 <footer>
