Fixed Past Results page and footer

--- a/prizes.html
+++ b/prizes.html
@@ -116,7 +116,7 @@
 		<br /> <!-- BREAK -->
 	</section>
 
-	<div class="sponsorBar">
+	<div class="sponsorBarResults">
 		<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
 		<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 		<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
