--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="results.html">Results</a></li>
+							<li><a href="pastResults.html">Past Results</a></li>
 						</ul>
 					</li>
 					<li class="navcol"><a href="tickets.html">Tickets</a></li>
@@ -230,7 +230,7 @@
       <br /> <!-- BREAK -->
     </p>
     <div class="buildn">
-      /build 0.9.2.0
+      /build 0.9.3.0
     </div>
   </div>
   <div class="footer visible-xs">
