--- a/schedule.html
+++ b/schedule.html
@@ -131,7 +131,7 @@
             </tr>
             <tr>
               <td>6:00PM</td>
-              <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels</td>
+              <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
             </tr>
             <tr>
               <td><b>Saturday, February 13th</b></td>
@@ -148,7 +148,7 @@
             </tr>
             <tr>
               <td>12:00PM</td>
-              <td>Kids Klub event on the ice in front of the View</td>
+              <td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
             </tr>
             <tr>
               <td>2:00PM</td>
