--- a/lodging.html
+++ b/lodging.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Jigs Up | Schedule</title>
+  <title>Jigs Up | Lodging</title>
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
@@ -49,8 +49,8 @@
       <div class="navbar-header">
         <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
           <span class="menuTrigger" id="hamburger-one">
-							<span class="mainLine"></span>
-						</span>
+            <span class="mainLine"></span>
+          </span>
         </button>
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" />
@@ -107,96 +107,154 @@
   <section id="content">
     <div class="container">
       <div class="row">
-        <div class="col-xs-6">
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <h2 class="headers">Schedule</h2>
+        <div class="col-sm-6">
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <h2 class="headers">Lodging</h2>
         </div>
         <!-- #col-sm-6 -->
       </div>
-      <!-- #container -->
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Time</th>
-              <th>Event</th>
-              <th> </th>
+
+      <table class="table">
+            <thead>
+              <tr>
+              <th>Hotel</th>
+              <th>Address</th>
+              <th>Phone</th>
+              <th>Rate</th>
+
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><b>Friday, February 12th</b></td>
-              <td></td>
+              <td><a target="_blank" alt="America's Best Value Inn" href="http://www.americasbestvalueinn.com/bestv.cfm?idp=1566">Americas Best Value Inn Campus View</a></td>
+              <td>809 W. Clairemont
+                <br /> Eau Claire, WI 54701</td>
+              <td>(715) 834-6611</td>
+              <td>$74.95</td>
             </tr>
             <tr>
-              <td>6:00PM</td>
-              <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
+              <td><a target="_blank" alt="Baymont!Inn & Suites" href="http://www.baymontinns.com/hotels/wisconsin/eau-claire/baymont-inn-and-suites-eau-claire-wi/hotel-overview?WID=LC:BU:20150901:Rio:Local">Baymont Inn & Suites</a></td>
+              <td>4075 Commonwealth
+                <br /> Eau Claire, WI 54701</td>
+              <td>(715) 839-7100</td>
+              <td>$75.00</td>
             </tr>
             <tr>
-              <td><b>Saturday, February 13th</b></td>
-              <td></td>
+              <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
+                <td>2703 Craig Rd.
+                  <br /> Eau Claire, WI 54701</td>
+                <td>(715) 835-2211</td>
+                <td>$86.95</td>
+
             </tr>
             <tr>
-              <td>7:00AM</td>
-              <td>Contest Begins! No need to pre-register, just head out to the ice and come in when you have a fish to register</td>
+              <td><a target="_blank" alt="Country Inn & Suites By Carlson" href="http://hotels.countryinns.com/wi/eauclaire/hotels_eau-claire_wi_wiclaire.html">Country Inn & Suites By Carlson</a></td>
+              <td>3614 Gateway DR
+                <br /> Eau Claire, WI 54701</td>
+              <td>(715) 832-7289</td>
+              <td>$99.00</td>
             </tr>
             <tr>
-              <td>9:00AM</td>
-              <td>Last Chance to purchase additional Fish Tickets for $40</td>
-              <td> </td>
+              <td><a target="_blank" alt="Hampton Inn & Suites-Lake Hallie" href="http://hamptoninn3.hilton.com/en/hotels/wisconsin/hampton-inn-and-suites-chippewa-falls-EAUCFHX/index.html">Hampton Inn & Suites-Lake Hallie</a></td>
+              <td>12707 30th Ave
+                <br />
+    Chippewa Falls, WI 54729</td>
+    <td>(715) 726-3000</td>
+                <td>$119.00</td>
             </tr>
             <tr>
-              <td>12:00PM</td>
-              <td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
+              <td><a target="_blank" alt="Holiday Inn Eau Claire South & Jonny's Italian Steakhouse" href="http://www.ihg.com/holidayinn/hotels/us/en/eau-claire/eauhi/hoteldetail">Holiday Inn Eau Claire South & Jonny's Italian Steakhouse</a></td>
+              <td>4751 Owen Ayres Court
+                <br />
+    Eau Claire, WI 54701</td>
+    <td>(715) 830-9889</td>
+                <td>$116.95</td>
             </tr>
+
             <tr>
-              <td>2:00PM</td>
-              <td>Weigh-in Stations close</td>
-              <td></td>
+              <td><a target="_blank" alt="Plaza Hotel & Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel & Suites</a></td>
+              <td>1202 W Clairemont
+                <br />
+    Eau Claire, WI 54701</td>
+    <td>(715) 834-3181</td>
+                <td>$109.00</td>
             </tr>
+
             <tr>
-              <td>3:00PM</td>
-              <td>Last Chance to purchase raffle tickets, winners announced and prizes distributed</td>
-              <td></td>
+              <td><a target="_blank" alt="Holiday Inn Express Hotel Suites" href="http://www.ihg.com/holidayinnexpress/hotels/us/en/chippewa-falls/halwi/hoteldetail">Holiday Inn Express Hotel Suites</a></td>
+              <td>12858 26th AVE
+                <br />
+    Chippewa Falls, WI 54729</td>
+    <td>(715) 723-4654</td>
+                <td>$94.95</td>
             </tr>
-            <tr>
-              <td>4:00PM</td>
-              <td>Fish contest winners announced and prizes distributed</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Stick around for music and fish stories at the bar</td>
-              <td></td>
-              <td></td>
-            </tr>
+
           </tbody>
         </table>
+<br />
+<br />
+        <div class="btn-center">
+          <a target="_blank" href="assets/hotels.pdf" <button class="btn1" >Click here to see more details</button></a>
+        </div>
       </div>
       <!-- #table-responsive -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
+
+
+
+      <br />
+      <!-- BREAK -->
+      <br />
+      <!-- BREAK -->
+      <br />
+      <!-- BREAK -->
+      <br />
+      <!-- BREAK -->
   </section>
 
   <div class="sponsorBar">
-    <a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-    <a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
-    <a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-    <a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-    <a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
-    <a href="http://www.prestigeautocorp.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-    <a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-    <a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
-    <a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-    <a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-    <a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
+    <a href="http://www.gordyscountymarket.net" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+    </a>
+    <a href="http://www.scheels.com" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+    </a>
+    <a href="http://www.geteskimo.com/" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear">
+    </a>
+    <a href="http://www.leinie.com" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+    <a href="http://www.stumpshotolives.com" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages">
+    </a>
+    <a href="http://www.prestigeautocorp.com" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
+    </a>
+    <a href="http://www.uwec.edu/dining/" target="_blank">
+      <img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+      <a href="http://www.pepsi.com/" target="_blank">
+        <img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi">
+      </a>
+      <a href="http://www.eauclaireford.com/" target="_blank">
+        <img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford">
+      </a>
+      <a href="http://www.theedgepubandeatery.com/" target="_blank">
+        <img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford">
+      </a>
+      <a href="https://www.facebook.com/wissota.view.5" target="_blank">
+        <img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford">
+      </a>
   </div>
-  <br /> <!-- BREAK -->
-  <br /> <!-- BREAK -->
+  <br />
+  <!-- BREAK -->
+  <br />
+  <!-- BREAK -->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -208,18 +266,23 @@
 
 <footer>
   <div class="footer hidden-xs">
-    <br /> <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
     <p>
       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br /> <!-- BREAK -->
+      <br />
+      <!-- BREAK -->
     </p>
   </div>
   <div class="footer visible-xs">
-    <br /> <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
     <p class="small-footer">
       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br /> <!-- BREAK -->
+      <br />
+      <!-- BREAK -->
     </p>
   </div>
 </footer>
+
 </html>
