--- a/prizes.html
+++ b/prizes.html
@@ -70,6 +70,8 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="prizes.html">Prizes</a></li>
 							<li role="presentation" class="divider"></li>
+							<li><a href="lodging.html">Lodging</a></li>
+							<li role="presentation" class="divider"></li>
 							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
