--- a/pastResults.html
+++ b/pastResults.html
@@ -71,6 +71,8 @@
               <li role="presentation" class="divider"></li>
               <li><a href="prizes.html">Prizes</a></li>
               <li role="presentation" class="divider"></li>
+              <li><a href="lodging.html">Lodging</a></li>
+              <li role="presentation" class="divider"></li>
               <li><a href="sponsors.html">Sponsors</a></li>
               <li role="presentation" class="divider"></li>
               <li><a href="pastResults.html">Past Results</a></li>
@@ -110,7 +112,7 @@
           <br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
-          <h2 class="headers">Past Resuls</h2>
+          <h2 class="headers">Past Results</h2>
           <br /> <!-- BREAK -->
         </div>
         <!-- #col-sm-8  -->
